Fixed Issue #7298
Add-on Developer Hub logo is displayed with layout issues in some languages #7298

--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -326,6 +326,7 @@ body:not(.home) .amo-header,
     small {
       margin-left: 5px;
       margin-bottom: 10px;
+      margin-top: 20px;
     }
   }
 }
